karnc/tests/fixtures/negative/200_actor_refinement_unsupported/src/demo.karn
context demo

actor Admin = User where true
